# portfolio-tracker

./: .dockerignore  .gitignore  Dockerfile  Portfolio Analytics System – Requirements.md  README.md  config.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.streamlit/: config.toml
analytics/: __init__.py  benchmark.py  indicators.py  optimizer.py  performance.py  portfolio.py  risk.py  valuation.py
data/: __init__.py  fetch_prices.py  yfinance_fetcher.py
db/: __init__.py  init_db.py  models.py  repositories.py  schema.sql  session.py
decision/: __init__.py  engine.py
docs/: manual_valuation.md
jobs/: __init__.py  daily_update.py  dividend_ingest.py
scripts/: backup_portfolio.py  compare_portfolio_optimization.py  manual_valuation.py  migrate_asset_tags.py  migrate_net_invested.py  migrate_yahoo_valuation.py  seed_fake_data.py  seed_market_indices.py  seed_test_portfolio.py
services/: __init__.py  asset_service.py  cash_service.py  market_index_service.py  note_service.py  position_service.py  tag_service.py  trade_service.py
ui/: __init__.py  app.py
